= Hitobito Changelog

== Version 1.3

* Mehrsprachigkeit
* Rollenauswahl auf Formular, nicht mehr im Dropdown
* Gruppenauswahl beim Erstellen von Rollen.