@@ -13,7 +13,8 @@ module Export::Csv::People
     def build_attribute_labels
       labels = super
       questions.each { |question| labels[:"question_#{question.id}"] = question.question }
-      labels[:additional_information] =  Event::Participation.human_attribute_name(:additional_information)
+      labels[:additional_information] =
+        Event::Participation.human_attribute_name(:additional_information)
       labels
     end
 
